# vicky

./: .air.admin.toml  .air.toml  .codecov.yml  .env.example  .gitignore  .golangci.yml  .goreleaser.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.admin.dev  Dockerfile.dev  LICENSE  Makefile  SECURITY.md  docker-compose.yml  go.mod  go.sum
.claude/: CLAUDE.md  CRITERIA.md  MISSION.md  PHILOSOPHY.md  REVIEW-ORDERS.md  STANDING-ORDERS.md
auth/: oauth.go
capacitors/: chunk.go  embedding.go  fetch.go  parse.go
chunkers/: go.mod  go.sum  server.go
config/: admin.go  app.go  app_test.go  chunker.go  database.go  database_test.go  embedding.go  encryption.go  encryption_test.go  redis.go  (+6 more)
training/: .gitignore  Makefile  README.md  pyproject.toml
training/configs/data/: pretrain.yaml  synthesis.yaml
training/configs/model/: qwen-1.5b-lora.yaml  qwen-7b-lora.yaml
training/configs/training/: debug.yaml  default.yaml  local.yaml  pretrain-local.yaml  pretrain.yaml
training/scripts/: evaluate.py  export.py  pretrain.py  pretrain_data.py  synthesize.py  train.py
training/src/trainer/: __init__.py  cli.py
training/src/trainer/evaluation/: __init__.py  metrics.py  runner.py
training/src/trainer/export/: __init__.py  convert.py  merge.py
training/src/trainer/pretrain/: __init__.py  dataset.py  extractor.py  trainer.py
training/src/trainer/synthesis/: __init__.py  extractor.py  formatter.py  pipeline.py
training/src/trainer/training/: __init__.py  config.py  model.py  trainer.py
training/tests/: __init__.py  test_export.py  test_synthesis.py  test_training.py
(+367 files in other folders)
